--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 9090
 
 spring.datasource.url = jdbc:mysql://localhost:3306/DB_Stories?createDatabaseIfNotExist=true&serverTimezone=UTC
 
-spring.datasource.dbcp2.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.username = root
 
